# TerrariaGL

./: CMakeLists.txt  README.md  chunk.txt
assets/shaders/: debug.glsl  frameShader.glsl  spriteShader.glsl  spriteShaderV2.glsl  test.glsl  textShader.glsl  worldShader.glsl
include/: constants.h  image.h  pch.h  window.h
include/components/: animation.h  component.h  spriteInfo.h  spriteRenderer.h
include/core/: application.h  input.h  window.h
include/entity/: animator.h  entity.h  player.h  spriteRenderer.h  transform.h
include/input/: input.h
include/physics/: physicsSystem.h
include/renderer/: VAO.h  buffer.h  debugRenderer.h  fontRenderer.h  framebuffer.h  instanceRenderer.h  renderBatch.h  renderer.h  shader.h  spriteRenderer.h  texture.h  tileMapRenderer.h
include/scene/: camera.h  entity.h  registry.h  scene.h
include/scripts/: Animation.h  Inventory.h  backgroundManager.h  characterController.h
include/util/: assetPool.h  image.h  linkedList.h
include/world/: Biome.h  noise.h  serialization.h  world.h  worldGenerator.h
libs/Glad/: Makefile
libs/Glad/include/glad/: glad.h
libs/Glad/libs/Glad/: Makefile
libs/Glad/libs/Glad/Glad.xcodeproj/: project.pbxproj
libs/Glad/libs/Glad/Glad.xcodeproj/xcuserdata/shauntemellor.xcuserdatad/xcschemes/: xcschememanagement.plist
libs/Glad/src/: glad.c
libs/entt/include/: include.hpp
libs/glfw/: Makefile
libs/glfw/libs/glfw/: Makefile
libs/glfw/libs/glfw/GLFW.xcodeproj/: project.pbxproj
libs/glfw/libs/glfw/GLFW.xcodeproj/xcuserdata/shauntemellor.xcuserdatad/xcschemes/: xcschememanagement.plist
libs/glfw/src/: cocoa_init.m
libs/stb_image/: stb_image.cpp
src/: image.cpp  input.cpp  main.cpp  window.cpp
src/core/: application.cpp  input.cpp  main.cpp  window.cpp
src/physics/: physicsSystem.cpp
src/renderer/: VAO.cpp  buffer.cpp  debugRenderer.cpp  fontRenderer.cpp  framebuffer.cpp  instanceRenderer.cpp  renderBatch.cpp  renderer.cpp  shader.cpp  spriteRenderer.cpp  texture.cpp  tileMapRenderer.cpp
src/scene/: camera.cpp  scene.cpp
src/scripts/: Animation.cpp  Inventory.cpp  backgroundManager.cpp  characterController.cpp
src/util/: assetPool.cpp  image.cpp
src/world/: biome.cpp  noise.cpp  workspace.code-workspace  world.cpp
